--- a/css/main.css
+++ b/css/main.css
@@ -2732,7 +2732,6 @@ html.no-csstransitions .home-content__main {
   font-size: 1.8rem;
   line-height: 2;
   margin-top: 4.2rem;
-  border-top: 1px solid rgba(0, 0, 0, 0.15);
   position: relative;
 }
 
@@ -2803,13 +2802,13 @@ html.no-csstransitions .home-content__main {
 }
 
 .testimonials__avatar {
-  width: 7.8rem;
-  height: 7.8rem;
+  width: 12rem;
+  height: 12rem;
   border-radius: 100%;
-  position: absolute;
-  left: 0;
-  top: 4.8rem;
-  outline: none;
+  /*position: absolute;*/
+  /*left: 0;*/
+  /*top: 4.8rem;*/
+  /*outline: none;*/
 }
 
 .testimonials__author {
@@ -2846,8 +2845,8 @@ html.no-csstransitions .home-content__main {
   }
 
   .testimonials__avatar {
-    width: 6.6rem;
-    height: 6.6rem;
+    width: 9.8rem;
+    height: 9.8rem;
   }
 }
 @media only screen and (max-width: 600px) {
@@ -3414,6 +3413,11 @@ html.no-csstransitions .home-content__main {
   .cl-go-top::after {
     display: none;
   }
+}
+
+.font-roboto {
+  font-family: 'Roboto', sans-serif !important;
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=main.css.map */
