--- a/css/main.css
+++ b/css/main.css
@@ -1671,7 +1671,7 @@ input::-moz-focus-inner {
   width: 100%;
   height: 100%;
   min-height: 786px;
-  /*background-color: transparent;*/
+  background-color: transparent;
   position: relative;
   display: table;
 }
@@ -1692,7 +1692,7 @@ input::-moz-focus-inner {
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.65;
+  opacity: 0.85;
   background-color: #000000;
 }
 
@@ -1741,7 +1741,7 @@ input::-moz-focus-inner {
 }
 
 .home-content__main {
-  padding-top: 15rem;
+  padding-top: 1rem;
   padding-right: 20rem;
   position: relative;
 }
