--- a/css/main.css
+++ b/css/main.css
@@ -2405,6 +2405,33 @@ html.no-csstransitions .home-content__main {
   font-size: 4.8rem;
 }
 
+/* -------------------------------------------------------------------
+ * ## services list
+ * ------------------------------------------------------------------- */
+.partners-list {
+  margin-top: 6rem;
+}
+.partners-list .partner-item {
+  margin-bottom: 1.5rem;
+}
+.partners-list .partner-item h3 {
+  margin-top: 0;
+  margin-bottom: 1.8rem;
+}
+.partners-list .partner-icon {
+  color: #26bfb5;
+  font-size: 6rem;
+}
+
+.partner__avatar {
+  width: 25rem;
+  height: 25rem;
+  /*position: absolute;*/
+  /*left: 0;*/
+  /*top: 4.8rem;*/
+  /*outline: none;*/
+}
+
 
 /* ------------------------------------------------------------------- 
  * responsive:
@@ -2848,6 +2875,11 @@ html.no-csstransitions .home-content__main {
     width: 9.8rem;
     height: 9.8rem;
   }
+
+  .partner__avatar {
+    width: 20rem;
+    height: 20rem;
+  }
 }
 @media only screen and (max-width: 600px) {
   .testimonials-header h1 {
@@ -2867,6 +2899,10 @@ html.no-csstransitions .home-content__main {
   }
 
   .testimonials__avatar {
+    left: 50%;
+  }
+
+  .partner__avatar {
     left: 50%;
   }
 }
